fixeed small issue with margin on mobile

--- a/sass/custom/_divider.scss
+++ b/sass/custom/_divider.scss
@@ -33,6 +33,7 @@
         top: 50%;
         margin-top: -$arrow-width/2;
       }
+      margin-bottom: 10px;
 
     }
     a {
